[package]
name = "VCS_tool_"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.10.5"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.3"
glob = "0.3.1"

[[bin]]
name = "VCS_tool"
path = "src/main.rs"